Closes #1701: Fix misaligned Arizona Header buttons in Safari (#1702)

--- a/scss/custom/_arizona-header.scss
+++ b/scss/custom/_arizona-header.scss
@@ -52,6 +52,7 @@
 .btn-arizona-header {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
   min-width: 60px;
   padding: 4px 0;
